thirtheenth.2 commit (memperbaiki desain edit profil)

--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -683,8 +683,8 @@ body {
 }
 
 .modal form button {
-    background-color: #5b6ff5;
-    color: white;
+    background-color: #FFD700;
+    color: black;
     border: none;
     padding: 12px;
     border-radius: 8px;
@@ -695,7 +695,7 @@ body {
 }
 
 .modal form button:hover {
-    background-color: #4a5fdd;
+    background-color: #FFD700;
 }
 
 .error-message {
