thirteenth.6 commit (refactor code dan mengganti warna header)

--- a/public/css/pengadu/profil.css
+++ b/public/css/pengadu/profil.css
@@ -28,7 +28,7 @@ margin: 0 auto;
 }
 
 .header {
-background: linear-gradient(135deg, #FFD700 0%, #FFC837 100%);
+background: linear-gradient(135deg, #c9711f 0%, #e6be61 100%);
 padding: 20px 30px;
 border-radius: 20px 20px 0 0;
 display: flex;
